# cmake_interface_ws

./: README.md
src/foobar_implA/: CMakeLists.txt
src/foobar_implA/include/: foobar_implA.hpp
src/foobar_implA/src/: foobar_implA.cpp
src/foobar_interface/: CMakeLists.txt
src/foobar_interface/include/: foobar_interface.hpp
src/foobar_result_test/: CMakeLists.txt
src/foobar_result_test/src/: test.cpp
src/libfoobar_result/: CMakeLists.txt
src/libfoobar_result/include/: result.hpp
src/libfoobar_result/src/: result.cpp
